--- a/src/main/webapp/resources/beneficio/css/beneficio.css
+++ b/src/main/webapp/resources/beneficio/css/beneficio.css
@@ -77,3 +77,7 @@ img.img-50{
 .img-generica.selected{
     border: 2px #337ab7 solid;
 }
+.icon-delete-img{
+        color: red;
+        cursor: pointer;
+}
